Make green darker to fix contrast issues

--- a/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
+++ b/backend/app/assets/stylesheets/spree/backend/global/_variables.scss
@@ -1,8 +1,8 @@
 /*------------------------------------------
   Colors
   -----------------------------------------*/
-  $primary: #478DC1;
-  $success: #7DB942;
+  $primary: darken(#478DC1, 10);
+  $success: darken(#7DB942, 2);
   $info:    #48B0F7;
   $warning: #F8D053;
   $danger:  #F55753;
